cropping functionality and bugs resolved

--- a/app/src/main/res/layouts/patient/patient_detail_page/layout/visit_details_child_item_layout.xml
+++ b/app/src/main/res/layouts/patient/patient_detail_page/layout/visit_details_child_item_layout.xml
@@ -22,7 +22,7 @@
     <LinearLayout
         android:id="@+id/items_layout"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/dp58"
         android:orientation="horizontal">
 
