added coach mark on download all patient

--- a/app/src/main/res/layouts/patient/patient_appointment/layout/my_patients_base_layout.xml
+++ b/app/src/main/res/layouts/patient/patient_appointment/layout/my_patients_base_layout.xml
@@ -6,6 +6,13 @@
     android:layout_height="match_parent"
     tools:openDrawer="end">
 
+
+    <FrameLayout
+        android:id="@+id/coachmarkContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:elevation="10dp" />
+
     <include layout="@layout/common_action_bar" />
 
     <FrameLayout
