solved zoho bugs

--- a/app/src/main/res/layouts/waiting_list/layout/waiting_content_layout.xml
+++ b/app/src/main/res/layouts/waiting_list/layout/waiting_content_layout.xml
@@ -27,6 +27,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
+            android:layout_marginLeft="@dimen/dp8"
+            android:padding="@dimen/dp12"
             tools:visibility="visible">
 
             <com.rescribe.doctor.ui.customesViews.CircularImageView
