--- a/app/src/main/res/layouts/patient/add_new_patient/layout/add_new_patient.xml
+++ b/app/src/main/res/layouts/patient/add_new_patient/layout/add_new_patient.xml
@@ -49,7 +49,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-         android:orientation="vertical">
+        android:orientation="vertical">
 
         <ScrollView
             android:id="@+id/mainParentScrollViewLayout"
@@ -210,6 +210,7 @@
                     android:layout_marginTop="@dimen/dp10"
                     android:textColor="@color/black"
                     android:textColorHint="@color/black"
+                    android:visibility="gone"
                     app:theme="@style/text_edit">
 
                     <EditText
