--- a/app/src/main/res/layouts/dashboard/layout/settings_base_layout.xml
+++ b/app/src/main/res/layouts/dashboard/layout/settings_base_layout.xml
@@ -12,5 +12,9 @@
     </android.support.design.widget.AppBarLayout>
 
 
-    <include layout="@layout/settings_layout"/>
+    <include
+        layout="@layout/settings_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/dp56" />
 </android.support.design.widget.CoordinatorLayout>
