--- a/app/src/main/res/layouts/patient/add_new_patient/layout/add_new_patient.xml
+++ b/app/src/main/res/layouts/patient/add_new_patient/layout/add_new_patient.xml
@@ -186,27 +186,27 @@
                     android:orientation="horizontal">
 
                     <RadioButton
-                        android:padding="@dimen/dp3"
-                        android:button="@drawable/radio_button_selector"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:button="@drawable/radio_button_selector"
+                        android:padding="@dimen/dp3"
                         android:text="@string/male" />
 
                     <RadioButton
-                        android:padding="@dimen/dp3"
-                        android:button="@drawable/radio_button_selector"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:button="@drawable/radio_button_selector"
+                        android:padding="@dimen/dp3"
                         android:text="@string/female" />
 
                     <RadioButton
-                        android:padding="@dimen/dp3"
-                        android:button="@drawable/radio_button_selector"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:button="@drawable/radio_button_selector"
+                        android:padding="@dimen/dp3"
                         android:text="@string/transgender" />
                 </RadioGroup>
 
@@ -216,7 +216,7 @@
                     android:layout_marginTop="@dimen/dp10"
                     android:textColor="@color/black"
                     android:textColorHint="@color/black"
-                    android:visibility="gone"
+                    android:visibility="visible"
                     app:theme="@style/text_edit">
 
                     <EditText
@@ -226,7 +226,7 @@
                         android:fontFamily="@font/roboto_regular"
                         android:gravity="center|left"
                         android:hint="@string/reference_id"
-                        android:inputType="text"
+                        android:maxLength="50"
                         android:textColor="@color/black"
                         android:textColorHint="@color/black"
                         android:textSize="@dimen/sp16" />
@@ -239,7 +239,7 @@
                     android:layout_height="@dimen/dp40"
                     android:layout_gravity="center"
                     android:layout_marginHorizontal="@dimen/dp30"
-                    android:layout_marginTop="@dimen/dp10"
+                    android:layout_marginTop="@dimen/dp16"
                     android:background="@color/tagColor"
                     android:fontFamily="@font/roboto_regular"
                     android:gravity="center"
