--- a/app/src/main/res/layouts/dashboard/layout/support_layout.xml
+++ b/app/src/main/res/layouts/dashboard/layout/support_layout.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:fillViewport="true"
     android:orientation="vertical">
 
@@ -95,9 +96,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="SCORG TECHNOLOGIES Pvt.Ltd."
+                android:text="@string/company_name"
                 android:textColor="@color/logo_color"
                 android:textSize="@dimen/sp13"
+                app:customFont="@string/roboto_regular"
+                app:srcCompat="@drawable/scrog_product" />
+
+            <com.rescribe.doctor.ui.customesViews.CustomTextView
+                android:id="@+id/versionText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textColor="@color/logo_color"
+                android:textSize="@dimen/sp13"
+                tools:text="v1.1(4)"
                 app:customFont="@string/roboto_regular"
                 app:srcCompat="@drawable/scrog_product" />
 
