--- a/app/src/main/res/layouts/dashboard/layout/dialog_update_app_layout.xml
+++ b/app/src/main/res/layouts/dashboard/layout/dialog_update_app_layout.xml
@@ -26,7 +26,8 @@
                 android:layout_marginTop="@dimen/dp40"
                 android:background="@drawable/vitals_curve_grey_bg"
                 android:gravity="center_vertical"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="@dimen/dp2">
 
                 <com.rescribe.doctor.ui.customesViews.CustomTextView
                     android:layout_width="match_parent"
@@ -76,6 +77,7 @@
                 android:textColor="@color/white"
                 android:textSize="@dimen/sp14"
                 app:customFont="@string/roboto_medium" />
+
             <android.support.v7.widget.AppCompatButton
                 android:id="@+id/updateButton"
                 android:layout_width="wrap_content"
@@ -92,6 +94,7 @@
                 android:textColor="@color/white"
                 android:textSize="@dimen/sp14"
                 app:customFont="@string/roboto_medium" />
+
             <android.support.v7.widget.AppCompatButton
                 android:id="@+id/laterButton"
                 android:layout_width="wrap_content"
