--- a/app/src/main/res/layouts/waiting_list/layout/list_item_draggable.xml
+++ b/app/src/main/res/layouts/waiting_list/layout/list_item_draggable.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:id="@+id/behind_views"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/container"
         android:layout_alignTop="@+id/container"
         tools:visibility="visible">
@@ -21,22 +21,73 @@
             android:layout_height="wrap_content"
             android:layout_weight=".65" />
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/dp8"
             android:layout_marginStart="@dimen/dp8"
-            android:layout_weight=".45">
+            android:layout_weight=".45"
+            android:background="@color/white"
+            android:orientation="vertical">
 
-            <ImageButton
+
+            <Button
+                android:id="@+id/waitingComplete"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:background="@color/transparent"
+                android:text="@string/capitalcompleted"
+                android:textAllCaps="false"
+                android:textColor="@color/tagColor"
+                android:textSize="@dimen/sp12" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp1"
+                android:layout_marginEnd="@dimen/dp3"
+                android:layout_marginStart="@dimen/dp3"
+                android:background="@color/tagColor" />
+
+            <Button
+                android:id="@+id/waitingDeleteButton"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:background="@color/transparent"
+                android:text="@string/delete"
+                android:textAllCaps="false"
+                android:textColor="@color/Red"
+                android:textSize="@dimen/sp12" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp1"
+                android:layout_marginEnd="@dimen/dp3"
+                android:layout_marginStart="@dimen/dp3"
+                android:background="@color/tagColor" />
+
+            <Button
+                android:id="@+id/waitingInConsultation"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:background="@color/transparent"
+                android:text="@string/inconsultation"
+                android:textAllCaps="false"
+                android:textColor="@color/tagColor"
+                android:textSize="@dimen/sp12" />
+
+
+            <!--<ImageButton
                 android:id="@+id/deleteButton"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="@dimen/dp2"
                 android:background="@drawable/result_white_box_copy"
-                app:srcCompat="@drawable/ic_delete_24dp" />
+                app:srcCompat="@drawable/ic_delete_24dp" />-->
 
-        </RelativeLayout>
+        </LinearLayout>
 
     </LinearLayout>
 
