--- a/app/src/main/res/layouts/waiting_list/layout/list_item_draggable.xml
+++ b/app/src/main/res/layouts/waiting_list/layout/list_item_draggable.xml
@@ -24,10 +24,12 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/dp6"
+            android:layout_marginTop="@dimen/dp3"
+            android:layout_marginRight="@dimen/dp6"
             android:layout_marginLeft="@dimen/dp8"
             android:layout_marginStart="@dimen/dp8"
             android:layout_weight=".45"
-            android:background="@color/white"
             android:orientation="vertical">
 
 
@@ -36,7 +38,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:background="@color/transparent"
+                android:background="@color/white"
                 android:text="@string/capitalcompleted"
                 android:textAllCaps="false"
                 android:textColor="@color/tagColor"
@@ -54,7 +56,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:background="@color/transparent"
+                android:background="@color/white"
                 android:text="@string/delete"
                 android:textAllCaps="false"
                 android:textColor="@color/Red"
@@ -72,7 +74,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:background="@color/transparent"
+                android:background="@color/white"
                 android:text="@string/inconsultation"
                 android:textAllCaps="false"
                 android:textColor="@color/tagColor"
