--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="clinic_address_color">#5f5f5f</color>
     <color name="menu_blue_dot">#499bc8</color>
     <color name="black">#000000</color>
+    <color name="black_opacity">#20000000</color>
     <color name="floating_blue_color">#3676A2</color>
     <color name="Red">#FF0000</color>
     <color name="tagColor">#04abdf</color>
