--- a/app/src/main/res/layouts/common/layout/common_recycler_view_with_searchtextview.xml
+++ b/app/src/main/res/layouts/common/layout/common_recycler_view_with_searchtextview.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,6 +7,7 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/searchLayout"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp56"
         android:layout_marginBottom="@dimen/dp7"
@@ -27,6 +28,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/searchLayout"
         android:orientation="vertical">
 
         <android.support.v7.widget.RecyclerView
@@ -38,9 +40,26 @@
             android:visibility="gone"
             tools:visibility="visible" />
 
+
         <include
             layout="@layout/common_no_records_found"
             android:visibility="visible" />
     </LinearLayout>
 
-</LinearLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/rightFabForAppointment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_gravity="bottom|right"
+        android:layout_marginBottom="@dimen/fab_margin"
+        android:layout_marginEnd="@dimen/fab_margin"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:layout_marginTop="@dimen/dp5"
+        android:visibility="gone"
+        app:backgroundTint="@color/floating_blue_color"
+        app:srcCompat="@drawable/ic_add_action"
+        tools:visibility="visible" />
+
+</RelativeLayout>
