--- a/app/src/main/res/layouts/patient/add_new_patient/layout/add_new_patient.xml
+++ b/app/src/main/res/layouts/patient/add_new_patient/layout/add_new_patient.xml
@@ -49,44 +49,61 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#e7e7e7"
         android:orientation="vertical">
 
         <ScrollView
             android:id="@+id/mainParentScrollViewLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#e7e7e7"
+            android:layout_margin="@dimen/dp16"
+
             android:fillViewport="true">
 
             <LinearLayout
                 android:id="@+id/mainParentLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="@dimen/dp16"
                 android:orientation="vertical">
 
-                <android.support.design.widget.TextInputLayout
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="?actionBarSize"
-                    android:background="@null"
-                    android:textColor="@color/black"
-                    android:textColorHint="@color/black"
-                    app:theme="@style/text_edit">
+                    android:orientation="horizontal">
 
-                    <EditText
-                        android:id="@+id/firstName"
-                        android:layout_width="match_parent"
+                    <Spinner
+                        android:id="@+id/salutationSpinner"
+                        android:layout_width="wrap_content"
                         android:layout_height="match_parent"
+                        android:entries="@array/salutation_entries"></Spinner>
+
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="?actionBarSize"
+                        android:layout_weight="1"
                         android:background="@null"
-                        android:fontFamily="@font/roboto_regular"
-                        android:gravity="center|left"
-                        android:hint="@string/first_name"
-                        android:inputType="text"
                         android:textColor="@color/black"
                         android:textColorHint="@color/black"
-                        android:textSize="@dimen/sp16" />
+                        app:theme="@style/text_edit">
 
-                </android.support.design.widget.TextInputLayout>
+                        <EditText
+                            android:id="@+id/firstName"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@null"
+                            android:fontFamily="@font/roboto_regular"
+                            android:gravity="center|left"
+                            android:hint="@string/first_name"
+                            android:inputType="text"
+                            android:textColor="@color/black"
+                            android:textColorHint="@color/black"
+                            android:textSize="@dimen/sp16" />
+
+                    </android.support.design.widget.TextInputLayout>
+
+
+                </LinearLayout>
+
 
                 <View
                     android:layout_width="match_parent"
@@ -422,12 +439,12 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:background="@null"
+                                android:clickable="true"
+                                android:focusable="false"
                                 android:fontFamily="@font/roboto_regular"
                                 android:gravity="center|left"
                                 android:hint="@string/area"
                                 android:maxLength="50"
-                                android:clickable="true"
-                                android:focusable="false"
                                 android:textColor="@color/black"
                                 android:textColorHint="@color/black"
                                 android:textSize="@dimen/sp16" />
@@ -479,88 +496,13 @@
                         android:layout_height="@dimen/dp1"
                         android:background="@color/black"></View>
 
-                    <android.support.design.widget.TextInputLayout
-                        android:id="@+id/referredByTextInputLayout"
-                        android:layout_width="match_parent"
-                        android:layout_height="?actionBarSize"
-                        android:layout_marginTop="@dimen/dp4"
-                        android:clickable="true"
-                        android:focusable="false"
-                        android:textColor="@color/black"
-                        android:textColorHint="@color/black"
-                        android:visibility="visible"
-                        app:theme="@style/text_edit">
-
-                        <EditText
-                            android:id="@+id/referredBy"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:clickable="true"
-                            android:focusable="false"
-                            android:fontFamily="@font/roboto_regular"
-                            android:gravity="center|left"
-                            android:hint="@string/name"
-                            android:maxLength="50"
-                            android:textColor="@color/black"
-                            android:textColorHint="@color/black"
-                            android:textSize="@dimen/sp16" />
-
-                    </android.support.design.widget.TextInputLayout>
-
-                    <android.support.design.widget.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="?actionBarSize"
-                        android:layout_marginTop="@dimen/dp10"
-                        android:textColor="@color/black"
-                        android:textColorHint="@color/black"
-                        android:visibility="visible"
-                        app:theme="@style/text_edit">
-
-                        <EditText
-                            android:id="@+id/referredPhone"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:fontFamily="@font/roboto_regular"
-                            android:gravity="center|left"
-                            android:hint="@string/enter_mobile_no"
-                            android:inputType="number"
-                            android:maxLength="10"
-                            android:textColor="@color/black"
-                            android:textColorHint="@color/black"
-                            android:textSize="@dimen/sp16" />
-
-                    </android.support.design.widget.TextInputLayout>
-
-                    <android.support.design.widget.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="?actionBarSize"
-                        android:layout_marginTop="@dimen/dp10"
-                        android:textColor="@color/black"
-                        android:textColorHint="@color/black"
-                        android:visibility="visible"
-                        app:theme="@style/text_edit">
-
-                        <EditText
-                            android:id="@+id/referredEmail"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:fontFamily="@font/roboto_regular"
-                            android:gravity="center|left"
-                            android:hint="@string/enter_email_id"
-                            android:inputType="textEmailAddress"
-                            android:maxLength="50"
-                            android:textColor="@color/black"
-                            android:textColorHint="@color/black"
-                            android:textSize="@dimen/sp16" />
-
-                    </android.support.design.widget.TextInputLayout>
+                    <include layout="@layout/add_new_reference_details" />
                 </LinearLayout>
-
 
                 <Button
                     android:id="@+id/btnAddPatientSubmit"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/dp40"
+                    android:layout_height="?actionBarSize"
                     android:layout_gravity="center"
                     android:layout_marginHorizontal="@dimen/dp30"
                     android:layout_marginTop="@dimen/dp16"
