--- a/app/src/main/res/layouts/patient/patient_appointment/layout/mypatients_filter_layout.xml
+++ b/app/src/main/res/layouts/patient/patient_appointment/layout/mypatients_filter_layout.xml
@@ -360,7 +360,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
-                    android:visibility="visible">
+                    android:visibility="gone"
+                    tools:visibility="visible">
 
                     <LinearLayout
                         android:id="@+id/locationHeaderView"
