worked on some issue

--- a/app/src/main/res/layouts/patient/add_new_patient/layout/add_new_reference_details.xml
+++ b/app/src/main/res/layouts/patient/add_new_patient/layout/add_new_reference_details.xml
@@ -37,6 +37,7 @@
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
+        android:id="@+id/referredPhoneTextInputLayout"
         android:layout_height="?actionBarSize"
         android:layout_marginTop="@dimen/dp10"
         android:textColor="@color/black"
@@ -60,6 +61,7 @@
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
+        android:id="@+id/referredEmailTextInputLayout"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
         android:layout_marginTop="@dimen/dp10"
