--- a/app/src/main/res/layouts/common/layout/common_recycler_view_with_searchtextview.xml
+++ b/app/src/main/res/layouts/common/layout/common_recycler_view_with_searchtextview.xml
@@ -47,7 +47,7 @@
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/rightFabForAppointment"
+        android:id="@+id/rightFab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
